--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "@types/node": "^20.3.1",
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
-    "tailwindcss": "^4.2.0",
-    "@tailwindcss/postcss": "^4.3.0"
+    "tailwindcss": "^4.3.1",
+    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.14"
   }
 }
