--- a/package.json
+++ b/package.json
@@ -8,17 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^13.5.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "next": "^15.5.2",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5.1.0",
-    "@types/node": "^20.3.1",
-    "@types/react": "^18.2.8",
-    "@types/react-dom": "^18.2.4",
     "tailwindcss": "^4.3.1",
     "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.14"
+    "autoprefixer": "^10.4.14",
+    "typescript": "^5.1.0",
+    "@types/node": "^20.3.1",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0"
   }
 }
