--- a/package.json
+++ b/package.json
@@ -10,16 +10,16 @@
   "dependencies": {
     "next": "^15.5.2",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "@supabase/supabase-js": "^2.28.0",  // Add Supabase
+    "tailwindcss": "^3.3.3",             // Use latest v3
+    "postcss": "^8.4.33",
+    "autoprefixer": "^10.4.14"
   },
   "devDependencies": {
-    "tailwindcss": "^4.1.12",
-    "postcss": "^8.4.33",
-    "autoprefixer": "^10.4.14",
     "typescript": "^5.1.0",
     "@types/node": "^20.3.1",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0"
   }
 }
-
