--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "next": "^15.5.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "@supabase/supabase-js": "^2.28.0",  // Add Supabase
-    "tailwindcss": "^3.3.3",             // Use latest v3
+    "@supabase/supabase-js": "^2.28.0",  
+    "tailwindcss": "^3.3.3",             
     "postcss": "^8.4.33",
     "autoprefixer": "^10.4.14"
   },
@@ -23,3 +23,4 @@
     "@types/react-dom": "^19.0.0"
   }
 }
+
